--- a/_posts/2020-06-30-MBG.md
+++ b/_posts/2020-06-30-MBG.md
@@ -9,5 +9,5 @@ tags: [user centered design, prototyping]
 
 To better help prospective students, we designed a platform to better find fitting university courses. For this, we conducted user interviews, constructed paper- and digital (via Axure) prototypes and performed a user study.
 
-![](https://youtu.be/VqjG5LuxZNs)
+[![](/assets/img/MBG.png)](https://youtu.be/VqjG5LuxZNs)
 
