--- a/_posts/2020-06-28-ILast.md
+++ b/_posts/2020-06-28-ILast.md
@@ -2,13 +2,13 @@
 layout: post
 title: iLast
 subtitle: Physiotherapy in VR
-cover-img: /assets/img/SopraCover.png
-share-img: /assets/img/SopraCover.png
+cover-img: /assets/img/iLastCover.png
+share-img: /assets/img/iLastCover.png
 tags: [interface design]
 ---
 
 ILast (Immersive Leg Coordination and Strenght Therapy) is a software which lets you do physiotherapy for leg injuries in Virtual Reality to improve motivation of the pations through gamification. We implemented the software from scratch using Unreal Engine 4. The project was made in cooperation with doctors from the "König-Ludwig-Haus" in Würzburg.
 
-![](/assets/img/Project_ILast.png)
+![](Project_ILast.png)
 
 
