--- a/_posts/2020-06-29-Museum.md
+++ b/_posts/2020-06-29-Museum.md
@@ -2,8 +2,8 @@
 layout: post
 title: User centered design
 subtitle: Re-designing a museum exhibit
-cover-img: 
-share-img: 
+cover-img: /assets/img/path.png
+share-img: /assets/img/path.png
 tags: [user centered design, prototyping]
 ---
 
