--- a/_posts/2020-06-27-Sopra.md
+++ b/_posts/2020-06-27-Sopra.md
@@ -2,12 +2,12 @@
 layout: post
 title: Interface Design
 subtitle: Serious Game
-cover-img: /assets/img/SopraCover.png
-share-img: /assets/img/SopraCover.png
+cover-img: /assets/img/SopraCover.jpg
+share-img: /assets/img/SopraCover.jpg
 tags: [interface design, serious game]
 ---
 
 Using a combination of HTML, CSS, Javascript and SQL we created a serious game to teach children how to cook. 
 
-![](/assets/img/SopraCover.png)](https://youtu.be/VqjG5LuxZNs)
+![](/assets/img/SopraCover.jpg)](https://youtu.be/VqjG5LuxZNs)
 
