--- a/_posts/2020-06-30-MBG.md
+++ b/_posts/2020-06-30-MBG.md
@@ -2,12 +2,12 @@
 layout: post
 title: User centered design
 subtitle: Information platform for prospective students
-cover-img: /assets/img/MBG.png
-share-img: /assets/img/MBG.png
+cover-img: /assets/img/MBG.jpg
+share-img: /assets/img/MBG.jpg
 tags: [user centered design, prototyping]
 ---
 
 To better help prospective students, we designed a platform to better find fitting university courses. For this, we conducted user interviews, constructed paper- and digital (via Axure) prototypes and performed a user study.
 
-![](/assets/img/MBG.png)](https://youtu.be/VqjG5LuxZNs)
+![](/assets/img/MBG.jpg)](https://youtu.be/VqjG5LuxZNs)
 
