--- a/_posts/2020-06-28-ILast.md
+++ b/_posts/2020-06-28-ILast.md
@@ -2,8 +2,8 @@
 layout: post
 title: iLast
 subtitle: Physiotherapy in VR
-cover-img: /assets/img/iLastCover.jpg
-share-img: /assets/img/iLastCover.jpg
+cover-img: /assets/img/ILastCover.PNG
+share-img: /assets/img/ILastCover.PNG
 tags: [VR]
 ---
 
