--- a/_posts/2020-06-27-Sopra.md
+++ b/_posts/2020-06-27-Sopra.md
@@ -9,5 +9,5 @@ tags: [interface design, serious game]
 
 Using a combination of HTML, CSS, Javascript and SQL we created a serious game to teach children how to cook. 
 
-![](/assets/img/SopraCover.jpg)](https://youtu.be/VqjG5LuxZNs)
+![](/assets/img/SopraCover.jpg)(https://youtu.be/VqjG5LuxZNs)
 
