--- a/_posts/2020-06-28-ILast.md
+++ b/_posts/2020-06-28-ILast.md
@@ -7,7 +7,7 @@ share-img: /assets/img/ILastCover.PNG
 tags: [VR]
 ---
 
-ILast (Immersive Leg Coordination and Strenght Therapy) is a software which lets you do physiotherapy for leg injuries in Virtual Reality to improve motivation of the pations through gamification. We implemented the software from scratch using Unreal Engine 4. The project was made in cooperation with doctors from the "König-Ludwig-Haus" in Würzburg.
+ILast (Immersive Leg Coordination and Strenght Therapy) is a software which lets you do physiotherapy for leg injuries in Virtual Reality to improve motivation of the patients through gamification. We implemented the software from scratch using Unreal Engine 4. The project was made in cooperation with doctors from the "König-Ludwig-Haus" in Würzburg.
 
 ![](/assets/img/Project_ILast.jpg)
 
