--- a/_posts/2020-07-01-Thesis.md
+++ b/_posts/2020-07-01-Thesis.md
@@ -7,6 +7,6 @@ share-img: /assets/img/Ohne Titel 19_1.png
 tags: [smart assistants, tests]
 ---
 
-The goal of my thesis was to find out how people imagine visual represntations of different smart speakers. The primary focus was on comparing differences between the representation of the Amazon Echo Dot and the Google Home Mini using a 2x2 Between Design. 
+The goal of my thesis was to find out how people imagine visual representations of different smart speakers. The primary focus was on comparing differences between the representation of the Amazon Echo Dot and the Google Home Mini using a 2x2 Between Design. 
 
 ![](/assets/img/Expo_Poster-1.png)
