--- a/_posts/2020-06-27-Sopra.md
+++ b/_posts/2020-06-27-Sopra.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Interface Design
-subtitle: Serious Game
+title: Serious game for cooking
+subtitle: Interface Design project
 cover-img: /assets/img/SopraCover.jpg
 share-img: /assets/img/SopraCover.jpg
 tags: [interface design, serious game]
@@ -9,5 +9,6 @@ tags: [interface design, serious game]
 
 Using a combination of HTML, CSS, Javascript and SQL we created a serious game to teach children how to cook. 
 
-![](/assets/img/SopraCover.jpg)(https://youtu.be/VqjG5LuxZNs)
+**Redirects to video:**
+[![](/assets/img/SopraCover.jpg)](https://youtu.be/VqjG5LuxZNs)
 
