--- a/_posts/2020-06-29-Museum.md
+++ b/_posts/2020-06-29-Museum.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: User centered design
-subtitle: Re-designing a museum exhibit
+title: Re-designing a museum exhibit
+subtitle: User centered design
 cover-img: /assets/img/path.jpg
 share-img: /assets/img/path.jpg
 tags: [user centered design, prototyping]
@@ -9,5 +9,8 @@ tags: [user centered design, prototyping]
 
 In a group consisting of students for HCI, museology and communication design we developed a concept to improve the user experience of visitors of an exhibit in the "Museum für Franken". For this, we constructed interviews with visitors, build physical prototypes and performed a user study with those prototypes.
 
-ENTER PICTURE IF FOUND
 
+
+![](/assets/img/Capture.PNG)
+![](/assets/img/Capture2.PNG)
+![](/assets/img/Capture3.PNG)
