--- a/_posts/2020-06-30-MBG.md
+++ b/_posts/2020-06-30-MBG.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: User centered design
-subtitle: Information platform for prospective students
+title: Information platform for prospective students
+subtitle: User Centered Design project
 cover-img: /assets/img/MBG.jpg
 share-img: /assets/img/MBG.jpg
 tags: [user centered design, prototyping]
@@ -9,5 +9,6 @@ tags: [user centered design, prototyping]
 
 To better help prospective students, we designed a platform to better find fitting university courses. For this, we conducted user interviews, constructed paper- and digital (via Axure) prototypes and performed a user study.
 
+**Rederict to video prototype:**
 [![](/assets/img/MBG.jpg)](https://youtu.be/VqjG5LuxZNs)
 
