--- a/_posts/2020-07-01-Thesis.md
+++ b/_posts/2020-07-01-Thesis.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Bachelor's Thesis
-subtitle: Visualization of Smartspeakers
+title: Visualization of Smartspeakers
+subtitle: Bachelor's Thesis
 cover-img: /assets/img/Ohne Titel 19_1.png
 share-img: /assets/img/Ohne Titel 19_1.png
 tags: [smart assistants, tests]
