--- a/_posts/2020-06-27-Sopra.md
+++ b/_posts/2020-06-27-Sopra.md
@@ -2,13 +2,13 @@
 layout: post
 title: Serious game for cooking
 subtitle: Interface Design project
-cover-img: /assets/img/SopraCover.jpg
-share-img: /assets/img/SopraCover.jpg
+cover-img: /assets/img/image1.jpg
+share-img: /assets/img/image1.jpg
 tags: [interface design, serious game]
 ---
 
 Using a combination of HTML, CSS, Javascript and SQL we created a serious game to teach children how to cook. 
 
 **Redirects to video:**
-[![](/assets/img/SopraCover.jpg)](https://youtu.be/VqjG5LuxZNs)
+[![](/assets/img/SopraCover.jpg)](https://youtu.be/E4FNu3AqjQw)
 
