--- a/_posts/2020-06-29-Museum.md
+++ b/_posts/2020-06-29-Museum.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title: Re-designing a museum exhibit
-subtitle: User centered design
+subtitle: User Centered Design project
 cover-img: /assets/img/path.jpg
 share-img: /assets/img/path.jpg
 tags: [user centered design, prototyping]
 ---
 
-In a group consisting of students for HCI, museology and communication design we developed a concept to improve the user experience of visitors of an exhibit in the "Museum für Franken". For this, we constructed interviews with visitors, build physical prototypes and performed a user study with those prototypes.
+In a group consisting of students for HCI, museology and communication design we developed a concept to improve the user experience of visitors of an exhibit in the "Museum für Franken". For this, we constructed interviews with visitors, built physical prototypes and performed a user study with those prototypes.
 
 
 
