--- a/_posts/2020-06-30-MBG.md
+++ b/_posts/2020-06-30-MBG.md
@@ -2,8 +2,8 @@
 layout: post
 title: Information platform for prospective students
 subtitle: User Centered Design project
-cover-img: /assets/img/MBG.jpg
-share-img: /assets/img/MBG.jpg
+cover-img: /assets/img/MBGBanner.jpg
+share-img: /assets/img/MBGBanner.jpg
 tags: [user centered design, prototyping]
 ---
 
