--- a/_posts/2020-06-27-Sopra.md
+++ b/_posts/2020-06-27-Sopra.md
@@ -2,8 +2,8 @@
 layout: post
 title: Serious game for cooking
 subtitle: Interface Design project
-cover-img: /assets/img/image1.jpg
-share-img: /assets/img/image1.jpg
+cover-img: /assets/img/Image1.jpg
+share-img: /assets/img/Image1.jpg
 tags: [interface design, serious game]
 ---
 
